--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-<style align="center"  >
+align="center"
             .box {
                 width:830px;
                 margin-left: auto;
@@ -45,4 +45,4 @@
                 height:170px;
                 font-size: 14;
                }           
-        </style>
+       
